--- a/apisix/etcd_conf/etcd.conf.yml
+++ b/apisix/etcd_conf/etcd.conf.yml
@@ -60,7 +60,7 @@ initial-advertise-peer-urls: http://localhost:2380
 
 # List of this member's client URLs to advertise to the public.
 # The URLs needed to be a comma-separated list.
-advertise-client-urls: http://localhost:2379
+advertise-client-urls: http://etcd:2379
 
 # Discovery URL used to bootstrap the cluster.
 discovery:
