--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,10 +37,11 @@ services:
       apisix:
 
   etcd:
+    container_name: etcd
     image: bitnami/etcd:3.5.11
     restart: always
     volumes:
-      - etcd_data:/bitnami/etcd
+      - ./etcd_data:/bitnami/etcd
     environment:
       ETCD_ENABLE_V2: "true"
       ALLOW_NONE_AUTHENTICATION: "yes"
@@ -76,6 +77,8 @@ services:
       - "4222:4222"
     image: nats
     command: --js
+    volumes:
+      - ./nats_data:/tmp/nats/jetstream  # Volumen persistente
     networks:
       apisix:
 
@@ -83,6 +86,3 @@ networks:
   apisix:
     driver: bridge
 
-volumes:
-  etcd_data:
-    driver: local
